# CubeSat-Core

./: .clang-format  .gitignore  .gitmodules  .project  CMakeLists.patch  CMakeLists.txt  Doxyfile  LICENSE  MAIN.md  README.md  build.sh  bump-version.sh  doctest.patch  export_client.sh  latitude.txt  longitude.txt  msnclient.c  my_jtok_mod.txt
cmake_refactor/: CMakeLists.txt
cmake_refactor/api/client_api/inc/: client_api.h  client_api.hpp  client_api_old.h
cmake_refactor/api/client_api/src/: client_api.c  client_api_old.c
cmake_refactor/api/libipc/inc/: client_t.h
cmake_refactor/client/: CMakeLists.txt
cmake_refactor/client/src/: client.c
cmake_refactor/ipcd/: CMakeLists.txt
cmake_refactor/msnclient/: CMakeLists.txt
cmake_refactor/subsys_server/src/: server.c  server.cpp
core/src/: CMakeLists.txt  Makefile  main.cc  main.cpp  todos.txt
core/src/AdcsEmulator/: AdcsEmulator.h
core/src/AttitudeSensor/: AttitudeSensor.cc  AttitudeSensor.h
core/src/batteries/cc/: Battery.cc  BatteryManager.cc
core/src/batteries/header/: Battery.h  BatteryManager.h
core/src/emulation/: SubsystemEmulator.h
core/src/message/: Makefile  message_test.cc
core/src/repositories/: Makefile  repo_test.cc
core/src/tcp/: TCPClient_test.cc
core/src/tcp/test/: a.out  (+2 more)
emulation/src/: CMakeLists.txt  main.cc
emulation/src/test/: emulator_test.cc
internal-messaging/: .cproject  .project  CMakeLists.txt
internal-messaging/message/: message_test.cc
internal-messaging/message/cc/: CommandMessage.cc  DataMessage.cc  KeyFloatPair.cc  KeyIntPair.cc  KeyStringPair.cc  KeyValuePairContainer.cc  Message.cc  MessageBuilder.cc
internal-messaging/message/header/: CommandMessage.h  DataMessage.h  Key.h  KeyFloatPair.h  KeyIntPair.h  KeyStringPair.h  KeyValuePairContainer.h  KeyValuePairContainerInterface.h  Message.h  MessageBuilder.h  MessageBuilderInterface.h  MessageSerializer.h
internal-messaging/message/identifiers/: AdcsKeys.h  Identifiers.h  PowerKeys.h  ProcessFilePaths.h  RecipientIdentifiers.h
internal-messaging/message/test/: message_test.cc  message_test2.cc  test.sh
internal-messaging/messaging-service/cc/: MessageRecievingService.cc  MessageRecipientInterface.cc  MessageSenderInterface.cc  MessageSendingService.cc  MessagingService.cc  PhoneBook.cc
internal-messaging/messaging-service/header/: MessageReceivingService.h  MessageRecipientInterface.h  MessageSenderInterface.h  MessageSendingService.h  MessagingService.h  PhoneBook.h
internal-messaging/messenger/: LorisMessenger.cc  LorisMessenger.h
internal-messaging/messenger/cc/: LorisMessenger.cc
internal-messaging/messenger/header/: LorisMessenger.h
internal-messaging/unixdomain/cc/: UnixDomainStreamSocket.cc  UnixDomainStreamSocketClient.cc  UnixDomainStreamSocketServer.cc
internal-messaging/unixdomain/header/: UnixDomainStreamSocket.h  UnixDomainStreamSocketClient.h  UnixDomainStreamSocketServer.h
internal-messaging/unixdomain/test/: client_test
msnclient/examples/: CMakeLists.txt
src/: CMakeLists.txt  COMPILING.md  CSTANDARD.md  EXPORTING.md  MACROS.md  MODULES.md  PORTABLE_DOCK.md  client.c  client_api.c  client_api.cc  client_handler.c  ipc.c  server.c  test.c  toolchain.cmake
src/SPI_Camera_ARM/: CMakeLists.txt  makefile
src/SPI_Camera_ARM/inc/: ArduCAM.h  ArducamDemo.h  bcm283x_board_driver.h
src/SPI_Camera_ARM/src/: ArduCAM.c  ArducamDemo.c  bcm283x_board_driver.c
src/api/client_api/: CMakeLists.txt
src/api/libipc/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/examples/: CMakeLists.txt
src/client/src/: client.c
src/client_cpp/: CMakeLists.txt
src/client_cpp/src/: client.cpp
src/client_t/: client_t.c
src/cmocka/: cmocka.c
src/dead code/ipc_client/: client.c  client.cc
src/dead code/tests/: test_client_api.c
src/dock/: CMakeLists.txt
src/dock/inc/: dock.h
src/dock/src/: dock.c  main.c
src/functional/: immut.c  ipcd.c
src/goofin/: CMakeLists.txt
src/goofin/src/: goofin.c
src/ipc_client/: client.c  client.cc  msnclient.c
src/ipcd/: CMakeLists.txt  client_handler.c  ipc.c  ipcd.c  main.c
src/ipcd/src/: main.c
src/ipcd_old/: ipc.c
src/isodock/: CMakeLists.txt
src/isodock/src/: isodock.c
src/libdock/: CMakeLists.txt
src/libdock/inc/: dock.h  dock_settings.h
src/libdock/src/: dock.c
src/libipc/: client_api.c  client_api.cc
src/libipc/client_api/: client_api.c  client_api.cc
src/libipc/client_t/: client_t.c
src/libipc/conn_t/: conn_t.c
src/libipc/ipcd/: ipcd.c
src/libipc/msg_req_dib/: msg_req_dib.c
src/libipc/util/: serialize.cc
src/libloriserr/: CMakeLists.txt
src/libloriserr/inc/: loriserr.h  loriserr_action.h  loriserr_det.h  loriserr_errno.h  loriserr_fix.h  loriserr_ticket.h
src/libloriserr/src/: loriserr_det.c
src/modules/: CMakeLists.txt
src/modules/brn/: CMakeLists.txt
src/modules/cmd/: CMakeLists.txt
src/modules/gps/: CMakeLists.txt
src/modules/imu/: CMakeLists.txt
src/modules/inc/: command_module.h  filesystem_module.h  gps_module.h  mission_module.h  payload_module.h  rf_module.h  template_module.h  template_module_cpp.hpp  test_module.h  test_module_2  test_module_2.h
src/modules/msn/: CMakeLists.txt
src/modules/pay/: CMakeLists.txt
src/modules/rav/: CMakeLists.txt
src/modules/rf/: CMakeLists.txt
src/modules/src/: command_module.c  filesystem_module.c  gps_module.c  mission_module.c  payload_module.c  rf_module.c  template_module.c  template_module_cpp.cpp  test_module.c  test_module_2.c
src/modules/tel/: CMakeLists.txt
src/msnclient/: CMakeLists.txt
src/msnclient/src/: msnclient.c
src/payload/: CMakeLists.txt  build.sh  toolchain.cmake  transfer.sh  transfer_images.sh
src/payload/src/: capture  capture.c
src/subsys_server/: CMakeLists.txt  server.c
src/subsys_server/examples/: CMakeLists.txt
src/subsys_server/tests/: CMakeLists.txt
src/subsystem/: dock.c  server_container_t.c
src/subsystem/dock/: CMakeLists.txt  dock.c
src/subsystem/servers/: CMakeLists.txt  template.c  twin.c
src/tests/: test.c  test_client_api.c  test_ipcd.c  test_old.c  test_wrappers.c
(+355 files in other folders)
